# loa

./: .gitignore  .pylintrc  README.md  example.toml.md  flake.nix  pyproject.toml  xform.jq
.github/: dependabot.yml
.github/workflows/: ci.yaml  data-check.yml  data-combine.yml  merge-schedule.yml
data/: EDGG-EBBU.json  EDGG-EBBU.toml  EDGG-EDGG.json  EDGG-EDGG.toml  EDGG-EDMM.json  EDGG-EDMM.toml  EDGG-EDUU.json  EDGG-EDUU.toml  EDGG-EDWW.json  EDGG-EDWW.toml  EDGG-EDYY.json  EDGG-EDYY.toml  EDGG-EHAA.json  EDGG-EHAA.toml  EDGG-LSAS.json  EDGG-LSAS.toml  EDMM-EDGG.json  EDMM-EDGG.toml  EDMM-EDMM.json  EDMM-EDMM.toml  EDMM-EDUU.json  EDMM-EDUU.toml  EDMM-EDWW.json  EDMM-EDWW.toml  EDMM-EDYY.json  EDMM-EDYY.toml  EDMM-EPWW.json  EDMM-EPWW.toml  EDMM-LIPP.json  EDMM-LIPP.toml  EDMM-LKAA.json  EDMM-LKAA.toml  EDMM-LOVV.json  EDMM-LOVV.toml  EDMM-LSAS.json  EDMM-LSAS.toml  EDUU-EDGG.json  EDUU-EDGG.toml  EDUU-EDMM.json  EDUU-EDMM.toml  (+72 more)
data/EDGG-EBBU/: EBG01.toml  EBG05.toml  EBG07.toml  EBUU.toml  EDUU.toml
data/EDGG-EDGG/: EBG01.toml  EBG02.toml  EBG03.toml  EBG04.toml  EBG05.toml  EBG06.toml  EBG07.toml  EBG08.toml  EBG10.toml
data/EDGG/EBBU/: loa.toml
data/EDGG/EDGG/: loa.toml
data/EDGG/EDMM/: EBG2.toml  EBG3.toml  EBG4.toml  EBG8.toml
data/EDGG/EDUU/: loa.toml
data/EDGG/EDWW/: loa.toml
data/EDGG/EDYY/: loa.toml
data/EDGG/EHAA/: loa.toml
data/EDGG/LSAS/: loa.toml
data/EDMM/EDGG/: app.toml  nord.toml  ost.toml  sued.toml
data/EDMM/EDMM/: app.toml  nord.toml  ost.toml  sued.toml
data/EDMM/EDUU/: nord.toml  ost.toml  sued.toml
data/EDMM/EDWW/: ost.toml
data/EDMM/EDYY/: ost.toml
data/EDMM/EPWW/: ost.toml
data/EDMM/LIMM/: sued.toml
data/EDMM/LKAA/: nord.toml  ost.toml
data/EDMM/LOVV/: app.toml  nord.toml  sued.toml
data/EDMM/LSAS/: sued.toml
data/EDUU/EDGG/: central.toml  (+1 more)
data/_docs/: docs.toml
src/: check_data.py  combine_data.py  test_runner.py
src/classes/: data.py
src/loa/: __init__.py  agreement.py  data.py  doc.py  utils.py
src/validators/: cop.py  icao.py  runway.py
src/views/: agreement.py
tests/validators/: test_cop.py  test_icao.py  test_runway.py
tests/views/: test_agreement.py
(+65 files in other folders)
